css/style.css
body {
    font-size: 14px;
    margin-top: 1em;
    background: #F2F4F7;
}

.header {
    display: inline-flex;
}

#messageListTitle {
    font-size: 3em;
    font-weight: 500;
}



.ellipsize {
    display: inline-block;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    line-height: 1.3em;
    position: relative;
}

.message-list .star:hover {
    color: #CCC;
}

.unread {
    font-weight: bold;
}

.glyphicon-star {
    color:#dddd00;
}

.spin {
    -webkit-animation: spin 1s infinite linear;
    -moz-animation: spin 1s infinite linear;
    -o-animation: spin 1s infinite linear;
    animation: spin 1s infinite linear;
    -webkit-transform-origin: 50% 50%;
    transform-origin:50% 50%;
    -ms-transform-origin:50% 50%; /* IE 9 */
}

@-moz-keyframes spin {
    from { -moz-transform: rotate(0deg); }
    to { -moz-transform: rotate(360deg); }
}

@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
    from { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

.loader {
    height: 50px;
}

.fillthespan
{
    display:block;
    height:100%;
    width:100%;
    text-decoration: none;
}

/* Message page */

.conversationContainer{

    margin: auto;
    max-width: 800px;
    padding:20px;
}

.messageControlPanel{

    text-align: left;
}

.singleMessage{
    margin-top: 20px;
    margin-bottom: 20px;
    background: white;
    padding: 10px;
    -moz-border-radius:10px;
    border-radius:10px;
}

.sender{

    display: inline;
    font-size: 100% ;
    font-weight: bold;
}
.messageTime{
    display: inline;
    color: grey;
}

.messageContent{
    margin-top:10px;
}

.multipleMessages
{
    list-style: none;
    padding-left: 0px;

}

.replyTextArea{
    width: 100%;
    height: 100px;
    margin-top:10px;
    margin-bottom: 10px;
}

.messageFilterSelect{
    display: inline;
}

#searchBox {
    display: inline;
}

.dateDisplay{

    padding: 0px;
}

.messageGlyph{
    padding: 0px;
    white-space:nowrap;

}

.totalUnread{

    margin : auto;

}

